# flight-agent

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  api.py  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: ci.yml
agent/: __init__.py  browser.py  config.py  core.py  exceptions.py  prompts.py
tests/: conftest.py  test_api.py  test_browser.py  test_config.py  test_core.py  test_exceptions.py  test_integration.py
