[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "browser-agent"
version = "1.0.0"
description = "Autonomous browser agent powered by Claude vision"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.49.0",
    "playwright==1.49.0",
    "pydantic-settings==2.7.0",
    "tenacity==9.0.0",
    "loguru==0.7.3",
    "rich==13.9.4",
    "python-dotenv==1.0.1",
]

[project.scripts]
browser-agent = "main:main"

[project.optional-dependencies]
cloud = [
    "fastapi==0.115.5",
    "uvicorn[standard]==0.32.1",
]
dev = [
    "pytest==8.3.5",
    "pytest-mock==3.14.0",
    "pytest-cov==6.0.0",
    "mypy==1.13.0",
    "ruff==0.8.6",
    "pre-commit==4.0.1",
    "httpx==0.28.1",
    "fastapi==0.115.5",
    "uvicorn[standard]==0.32.1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["agent*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
include = ["agent/*", "api.py"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
skip_covered = false

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = [
    "E501",   # line length — handled by formatter
    "SIM108", # ternary operator — readability preference
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]  # assert is fine in tests

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
ignore_missing_imports = true  # playwright, loguru stubs vary by install
